[gd_scene load_steps=9 format=3 uid="uid://murpraarljcp"]

[ext_resource type="PackedScene" uid="uid://ba5dp78yh7n5t" path="res://SpaceBackground.tscn" id="1_dp36p"]
[ext_resource type="Script" uid="uid://ckm5v3dooegf6" path="res://MainGameScene.gd" id="1_t7cbl"]
[ext_resource type="Theme" uid="uid://d2s3l7uarun4l" path="res://Interface/UIButton.tres" id="2_t7cbl"]
[ext_resource type="Texture2D" uid="uid://tjgxjkkpghn4" path="res://Graphics/Icons/award_ribbon.png" id="3_lhppi"]
[ext_resource type="Texture2D" uid="uid://b4sebah277pjs" path="res://Graphics/Icons/hit_target.png" id="5_holyq"]
[ext_resource type="Texture2D" uid="uid://doh3lkripxhn0" path="res://Graphics/Icons/checklist.png" id="6_ccfle"]
[ext_resource type="Texture2D" uid="uid://clmmmf071445r" path="res://Graphics/Icons/person_single.png" id="7_2p6ie"]
[ext_resource type="Texture2D" uid="uid://dmlp57ua85tsx" path="res://Graphics/Icons/fastForward.png" id="11_48cxd"]

[node name="MainGameScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t7cbl")

[node name="SpaceBackground" parent="." instance=ExtResource("1_dp36p")]

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuButtons" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="RepMenuButton" type="Button" parent="HBoxContainer/MenuButtons"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
theme = ExtResource("2_t7cbl")
toggle_mode = true
icon_alignment = 1
expand_icon = true

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MenuButtons/RepMenuButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/MenuButtons/RepMenuButton/MarginContainer"]
layout_mode = 2
texture = ExtResource("3_lhppi")
expand_mode = 1

[node name="MissionBuilderButton" type="Button" parent="HBoxContainer/MenuButtons"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
theme = ExtResource("2_t7cbl")
toggle_mode = true
icon_alignment = 1
expand_icon = true

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MenuButtons/MissionBuilderButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/MenuButtons/MissionBuilderButton/MarginContainer"]
layout_mode = 2
texture = ExtResource("5_holyq")
expand_mode = 1

[node name="MissionListButton" type="Button" parent="HBoxContainer/MenuButtons"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
theme = ExtResource("2_t7cbl")
toggle_mode = true
icon_alignment = 1
expand_icon = true

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MenuButtons/MissionListButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/MenuButtons/MissionListButton/MarginContainer"]
layout_mode = 2
texture = ExtResource("6_ccfle")
expand_mode = 1

[node name="PilotListButton" type="Button" parent="HBoxContainer/MenuButtons"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
theme = ExtResource("2_t7cbl")
toggle_mode = true
icon_alignment = 1
expand_icon = true

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MenuButtons/PilotListButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/MenuButtons/PilotListButton/MarginContainer"]
layout_mode = 2
texture = ExtResource("7_2p6ie")
expand_mode = 1

[node name="MainContentArea" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="AdvanceButton" type="Button" parent="."]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
offset_left = 1752.0
offset_top = 937.0
offset_right = 1880.0
offset_bottom = 1065.0
theme = ExtResource("2_t7cbl")
icon_alignment = 1
expand_icon = true

[node name="MarginContainer" type="MarginContainer" parent="AdvanceButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="TextureRect" type="TextureRect" parent="AdvanceButton/MarginContainer"]
layout_mode = 2
texture = ExtResource("11_48cxd")
expand_mode = 1
